Definiendo ultimos cambios

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 <body>
       <nav class="navbar justify-content-between navbar-expand-lg bg-light">
             <div  class="container-fluid d-flex justify-content-between">
-              <a class="navbar-brand" href="#"><img data-aos="flip-right" data-aos-duration="800" src="./assets/img/logo lulipets 60x60.png" alt=""></a>
+              <a class="navbar-brand" href="./index.html"><img data-aos="flip-right" data-aos-duration="800" src="./assets/img/logo lulipets 60x60.png" alt=""></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+              <div class="collapse navbar-collapse" id="navbarNavSupportedContent">
+                <ul class="navbar-nav mr-auto">
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
                   </li>
@@ -122,18 +122,20 @@
     <aside>
 
     </aside>
-    <footer class="footer d-flex justify-content-space-between">
+    <footer>
+      <div class="footer d-flex justify-content-between ">
         <div class="logoLulipets mx-3">
-            <img src="./assets/img/logo 75x75.png" alt="">
+            <img src="../assets/img/logo 75x75.png" alt="">
         </div>
         <div class="derechos d-flex align-items-end">
             <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
-        <div class="redes d-flex align-items-center mx-4">
-            <a class="m-1" target="_blank" href="https://www.facebook.com/"><img src="./assets/img/facebook 20x20.png"></a>
-            <a class="m-1" target="_blank" href="https://www.instagram.com/"><img src="./assets/img/instagram 20x20.png"></a>
-            <a class="m-1" target="_blank" href="www.twitter.com/"><img src="./assets/img/twitter 20x20.png"></a> 
+        <div class="redes d-flex align-items-center">
+            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
+            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
+            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
         </div>
+      </div>
     </footer>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
