--- a/pages/Afiliados.html
+++ b/pages/Afiliados.html
@@ -46,6 +46,7 @@
             </div>
           </nav>
     </nav>
+  <div class="div container-fluid">
     <header class="HeaderAfiliados row d-flex flex-column align-items-center justify-content-around ">
       <div class="d-flex flex-column align-items-center justify-content-center my-1 col-10 col-lg-6 ">
         <h1>Afiliados de Lulipets</h1>
@@ -137,19 +138,22 @@
         </ul>
       </nav>
     </aside>
-    <footer class="footer d-flex justify-content-space-between">
-        <div class="logoLulipets">
+    <footer class="foter row">
+      <div class="footer d-flex justify-content-between ">
+        <div class="logoLulipets mx-3">
             <img src="../assets/img/logo 75x75.png" alt="">
         </div>
         <div class="derechos d-flex align-items-end">
             <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
-            <a class="m-1" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
-            <a class="m-1" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
-            <a class="m-1" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
+            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
+            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
+            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
         </div>
+      </div>
     </footer>
+  </div>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
