--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -44,28 +44,56 @@
             </div>
           </nav>
     </nav>
+  <div class="div container-fluid">
     <header>
-
     </header>
-    <main>
-
+    <main class="Nosotros row d-flex justify-content-center">
+        <div class=" d-flex flex-column align-items-center">
+          <img class="my-2" src="../assets/img/Nosotros/logo lulipets 2grande.png" alt="">
+          <h1 class="my-3">¿Cómo nacimos?</h1>
+          <br>
+          <p class= "col-10 col-xl-9">“Luli”, nuestra mascota, falleció de cáncer. Fueron meses de tratamientos, turnos con el veterinario, remedios y esperas para tratar una enfermedad que avanzaba implacablemente... En el proceso vimos como la energía de ella se apagaba poco a poco y como las tardanzas de un sistema que no funciona alargaban aun mas la agonía. Es por eso que creamos Lulipets, una aplicación fácil, dinámica e intuitiva en la que podamos controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de nuestras mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas. Nuestro objetivo es que ninguna mascota pase por lo mismo que Luli, y ayudar a sus dueños a encontrar el lugar ideal para poder atenderlos. Con su ayuda podemos mejorar la infraestructura de nuestra aplicación, y lograr que muchas mascotas tengan la atención y el cuidado que se merecen.</p>
+        </div>
+          <div class="cardsNosotros my-2 row d-flex flex-wrap justify-content-center">
+              <div data-aos="zoom-in-up"  class="cardNosotros m-3">
+                <h5 class="card-title m-3">Problema</h5>
+                <hr class="linea">
+                <p class="card-text m-3">Tener mascotas implica tener muchas responsabilidades, sobre todo cuando hablamos de su salud. Las veterinarias no evolucionaron en este mundo digital y resuelven sus turnos, fechas e historial clínico mediante lápiz y papel. Es hora de actualizarnos en este mundo nuevo y crear herramientas que nos solucionen este problema.</p>
+              </div>
+              <div data-aos="zoom-in-up"  class="cardNosotros m-3">
+                <h5 class="card-title m-3">Objetivo</h5>
+                <hr class="linea">
+                <p class="card-text m-3">Nuestro objetivo principal es es cuidar a los animales para que puedan encontrar un lugar en donde los atiendan como se lo merecen. De esta manera ayudar al pueblo argentino a llevar las tareas, relacionadas con la salud, de una manera facil y desde su telefono movil.</p>
+              </div>
+              <div data-aos="zoom-in-up"  class="cardNosotros1 m-3">
+                <h5 class="card-title1 m-3">Solución</h5>
+                <hr class="linea1">
+                <p class="card-text m-3">Teniendo en cuenta que en Argentina el 80% de la población tiene al menos una mascota, y el número de dispositivos móviles es de 55,19 millones a nivel nacional, es decir que la cantidad de conexiones a través de celulares,  superan a la población total (121.6%).
+                  Juntamos estos datos duros y obtenemos la solución a la problemática planteada. La creación de una app fácil, dinámica e intuitiva en la que los dueños puedan controlar vacunaciones, desparasitaciones, alergias y turnos veterinarios de sus mascotas. Como así localizar las clínicas veterinarias más cercanas y mejor valoradas.</p>
+              </div>
+              <div data-aos="zoom-in-up" class="d-flex flex-wrap justify-content-center my-3">
+                <img src="../assets/img/Nosotros/petting.svg" alt="">
+                <img src="../assets/img/Nosotros/Doggie.svg" alt="">
+              </div>
     </main>
     <aside>
-
     </aside>
-    <footer class="footer d-flex justify-content-space-between">
-        <div class="logoLulipets">
+    <footer class="foter row">
+      <div class="footer d-flex justify-content-between ">
+        <div class="logoLulipets mx-3">
             <img src="../assets/img/logo 75x75.png" alt="">
         </div>
         <div class="derechos d-flex align-items-end">
             <p>©2022 Gastón Sánchez ,todos los derechos reservados</p>
         </div>
         <div class="redes d-flex align-items-center">
-            <a class="m-1" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
-            <a class="m-1" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
-            <a class="m-1" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
+            <a class="mx-2" target="_blank" href="https://www.facebook.com/"><img src="../assets/img/facebook 20x20.png"></a>
+            <a class="mx-2" target="_blank" href="https://www.instagram.com/"><img src="../assets/img/instagram 20x20.png"></a>
+            <a class="mx-2" target="_blank" href="www.twitter.com/"><img src="../assets/img/twitter 20x20.png"></a> 
         </div>
+      </div>
     </footer>
+  </div>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
